Fix focus indicator on highlighted options
This was not visible when using High Contrast mode. This uses a similar
approach to the search with autocomplete component to ensure selected
options are highlighted correctly.

--- a/app/assets/stylesheets/govuk_publishing_components/components/_select-with-search.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_select-with-search.scss
@@ -175,3 +175,12 @@ $choices-button-dimension: 12px !default;
     cursor: default;
   }
 }
+
+// High contrast mode adjustments
+@media (forced-colors: active) {
+  .choices__list--dropdown .choices__item--selectable.is-highlighted,
+  .choices__list[aria-expanded] .choices__item--selectable.is-highlighted {
+    forced-color-adjust: none; // opt out of all default forced-colors adjustments
+    background-color: Highlight;
+  }
+}
